CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/CandidateResult__c.object-meta.xml
<CustomObject>
    <label>Candidate Result</label>
    <nameField>
        <displayFormat>Candidate Result {000000000}</displayFormat>
        <label>Candidate Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>