CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidate Results</relationshipLabel>
    <relationshipName>Candidate_Results</relationshipName>
    <type>Lookup</type>
</CustomField>