CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/fields/PassPercentage__c.field-meta.xml
<CustomField>
    <fullName>PassPercentage__c</fullName>
    <formula>( QuestionsPassed__c  /  TotalQuestions__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>