CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/fields/PassRatio__c.field-meta.xml
<CustomField>
    <fullName>PassRatio__c</fullName>
    <label>PassRatio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>