CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/fields/Question_Set__c.field-meta.xml
<CustomField>
    <fullName>Question_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Set</label>
    <referenceTo>QuestionSet__c</referenceTo>
    <relationshipLabel>Candidate Results</relationshipLabel>
    <relationshipName>Candidate_Results</relationshipName>
    <type>Lookup</type>
</CustomField>