CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/fields/QuestionsPassed__c.field-meta.xml
<CustomField>
    <fullName>QuestionsPassed__c</fullName>
    <label>Questions Passed</label>
    <summaryFilterItems>
        <field>CandidateQuestionResult__c.Result__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>CandidateQuestionResult__c.CandidateResult__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>