CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/fields/SubmitTime__c.field-meta.xml
<CustomField>
    <fullName>SubmitTime__c</fullName>
    <description>The time these candidate results were submitted by the candidate</description>
    <label>Submit Time</label>
    <type>DateTime</type>
</CustomField>