CLIENT/CodeAssessMetadata/main/default/objects/CandidateResult__c/fields/TotalQuestions__c.field-meta.xml
<CustomField>
    <fullName>TotalQuestions__c</fullName>
    <label>Total Questions</label>
    <summaryForeignKey>CandidateQuestionResult__c.CandidateResult__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>